fix: overflowx hidden for mobile devicies

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -35,6 +36,11 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  overflow-x: hidden;
+  position: relative;
+}
+
+body, html {
   overflow-x: hidden;
 }
 
